force-app/main/default/objects/Late_Load__c/fields/Related_Load__c.field-meta.xml
<CustomField>
    <fullName>Related_Load__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Load</label>
    <referenceTo>Late_Load__c</referenceTo>
    <relationshipLabel>PIR</relationshipLabel>
    <relationshipName>PIR</relationshipName>
    <type>Lookup</type>
</CustomField>