force-app/main/default/objects/Late_Load__c/fields/Replacement_delivery_at_later_time__c.field-meta.xml
<CustomField>
    <fullName>Replacement_delivery_at_later_time__c</fullName>
    <formula>IF(ISBLANK(Replacement_Time__c),FALSE, Replacement_Time__c &gt;  Dispatch__r.Planned_Delivery_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement delivery at later time?</label>
    <type>Checkbox</type>
</CustomField>