force-app/main/default/objects/Late_Load__c/fields/Replacement_Dispatch_ID__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Dispatch_ID__c</fullName>
    <description>ID of Dispatch replacing a Collapsed Load</description>
    <label>Replacement Dispatch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>