force-app/main/default/objects/Late_Load__c/fields/Replacement_Time__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Time__c</fullName>
    <description>Date and time that replacement occurred</description>
    <label>Replacement Time</label>
    <type>DateTime</type>
</CustomField>