force-app/main/default/objects/Late_Load__c/fields/Reported__c.field-meta.xml
<CustomField>
    <fullName>Reported__c</fullName>
    <label>Reported</label>
    <length>100</length>
    <type>Text</type>
</CustomField>