force-app/main/default/objects/Late_Load__c/fields/Return_Reference__c.field-meta.xml
<CustomField>
    <fullName>Return_Reference__c</fullName>
    <label>Return Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>