force-app/main/default/objects/Late_Load__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <length>25</length>
    <type>Text</type>
</CustomField>