force-app/main/default/objects/Late_Load__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <length>40</length>
    <type>Text</type>
</CustomField>