force-app/main/default/objects/Late_Load__c/fields/Shot__c.field-meta.xml
<CustomField>
    <fullName>Shot__c</fullName>
    <label>Shot</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>