force-app/main/default/objects/Late_Load__c/fields/Shrouding__c.field-meta.xml
<CustomField>
    <fullName>Shrouding__c</fullName>
    <label>Shrouding</label>
    <length>25</length>
    <type>Text</type>
</CustomField>