force-app/main/default/objects/Late_Load__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <label>SOP</label>
    <length>150</length>
    <type>Text</type>
</CustomField>