force-app/main/default/objects/Late_Load__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Haulier</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Kammac Warrington</fullName>
            </value>
            <value>
                <fullName>Malcolms Haydock</fullName>
            </value>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Derrylin</fullName>
            </value>
            <value>
                <fullName>Ballyconell</fullName>
            </value>
            <value>
                <fullName>The Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>