force-app/main/default/objects/Late_Load__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Early or Late? (Or On Time but Collapsed)</description>
    <inlineHelpText>Early or Late? (Or On Time but Collapsed)</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Time</fullName>
                <default>true</default>
                <label>On Time</label>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>