force-app/main/default/objects/Late_Load__c/fields/Strapped__c.field-meta.xml
<CustomField>
    <fullName>Strapped__c</fullName>
    <label>Strapped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Derrylin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>