force-app/main/default/objects/Late_Load__c/fields/Time_no_glass__c.field-meta.xml
<CustomField>
    <fullName>Time_no_glass__c</fullName>
    <description>Time that the production lines went down due to lack of glass</description>
    <label>Time customer ran out of glass</label>
    <type>DateTime</type>
</CustomField>