force-app/main/default/objects/Late_Load__c/fields/Trailer_Dropped_in_Elton__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Dropped_in_Elton__c</fullName>
    <label>Trailer Dropped in Elton</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>