force-app/main/default/objects/Late_Load__c/fields/Type_Used__c.field-meta.xml
<CustomField>
    <fullName>Type_Used__c</fullName>
    <label>Type Used</label>
    <length>25</length>
    <type>Text</type>
</CustomField>