force-app/main/default/objects/Late_Load__c/fields/Warehouse_ID__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_ID__c</fullName>
    <formula>Dispatch__r.Warehouse_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse ID</label>
    <type>Text</type>
</CustomField>