force-app/main/default/objects/Late_Load__c/fields/Was_load_replaced__c.field-meta.xml
<CustomField>
    <fullName>Was_load_replaced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was collapsed load replaced by a subsequent dispatch?</description>
    <inlineHelpText>Was collapsed load replaced by a subsequent dispatch?</inlineHelpText>
    <label>Was load replaced?</label>
    <type>Checkbox</type>
</CustomField>