force-app/main/default/objects/Late_Load__c/fields/Where_was_the_load_cleared_by__c.field-meta.xml
<CustomField>
    <fullName>Where_was_the_load_cleared_by__c</fullName>
    <label>Where was the load cleared by?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>