force-app/main/default/objects/Late_Load__c/fields/Where_was_the_shot_load_found__c.field-meta.xml
<CustomField>
    <fullName>Where_was_the_shot_load_found__c</fullName>
    <label>Where was the shot load found?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>