force-app/main/default/objects/Late_Load__c/fields/Who_reported_this_issue__c.field-meta.xml
<CustomField>
    <fullName>Who_reported_this_issue__c</fullName>
    <label>Who reported this issue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Haulier</fullName>
            </value>
            <value>
                <fullName>Sales Exec</fullName>
            </value>
            <value>
                <fullName>Customs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>