force-app/main/default/objects/Late_Load__c/fields/Works_Order__c.field-meta.xml
<CustomField>
    <fullName>Works_Order__c</fullName>
    <label>Works Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>