force-app/main/default/objects/Late_Load__c/recordTypes/Collapsed_Load.recordType-meta.xml
<RecordType>
    <fullName>Collapsed_Load</fullName>
    <active>true</active>
    <description>Load collapsed on delivery</description>
    <label>Collapsed Load</label>
</RecordType>