force-app/main/default/objects/Late_Load__c/recordTypes/Early_Load.recordType-meta.xml
<RecordType>
    <fullName>Early_Load</fullName>
    <active>true</active>
    <description>Delivery early and not collapsed</description>
    <label>Early Load</label>
</RecordType>