force-app/main/default/objects/Late_Load__c/recordTypes/Health_Safety.recordType-meta.xml
<RecordType>
    <fullName>Health_Safety</fullName>
    <active>true</active>
    <description>The record type to be used for health and safety issues</description>
    <label>Health &amp; Safety</label>
</RecordType>