force-app/main/default/objects/Late_Load__c/recordTypes/Late_Load.recordType-meta.xml
<RecordType>
    <fullName>Late_Load</fullName>
    <active>true</active>
    <description>Delivery late but not collapsed</description>
    <label>Late Load</label>
</RecordType>