force-app/main/default/objects/Late_Load__c/validationRules/Delivery_date_early_if_Status_is_Early.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_date_early_if_Status_is_Early</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Early&quot;),
  New_Delivery_Date__c &gt;=  Planned_Delivery_Date__c 
)</errorConditionFormula>
    <errorDisplayField>New_Delivery_Date__c</errorDisplayField>
    <errorMessage>For an Early Load, the new delivery date must be earlier than the planned delivery date</errorMessage>
</ValidationRule>