force-app/main/default/objects/Late_Load__c/validationRules/Delivery_date_late_if_Status_is_Late.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_date_late_if_Status_is_Late</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Late&quot;),
  New_Delivery_Date__c &lt;=  Planned_Delivery_Date__c 
)</errorConditionFormula>
    <errorDisplayField>New_Delivery_Date__c</errorDisplayField>
    <errorMessage>For a Late Load, the new delivery date must be later than the planned delivery date</errorMessage>
</ValidationRule>