force-app/main/default/objects/Late_Load__c/validationRules/Reported_Issue_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Reported_Issue_Other</fullName>
    <active>true</active>
    <description>Enforces &apos;Other - Please Specify&apos; to be completed if &apos;Other&apos; selected as Reported by</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Who_reported_this_issue__c, &quot;Other&quot;),
    ISBLANK(Other_Please_Specifiy__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Please_Specifiy__c</errorDisplayField>
    <errorMessage>Please specify who this issue was reported by.</errorMessage>
</ValidationRule>