force-app/main/default/objects/Late_Load__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dispatch_Name__c</columns>
    <columns>Haulier__c</columns>
    <columns>Collapsed__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Delivery_Date__c</columns>
    <columns>New_Delivery_Date__c</columns>
    <columns>Customer_Informed__c</columns>
    <columns>Date_Informed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>