force-app/main/default/objects/Late_Load__c/listViews/Health_Safety.listView-meta.xml
<ListView>
    <fullName>Health_Safety</fullName>
    <columns>NAME</columns>
    <columns>Dispatch__c</columns>
    <columns>Collapsed__c</columns>
    <columns>Status__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Planned_Delivery_Date__c</columns>
    <columns>New_Delivery_Date__c</columns>
    <columns>Customer_Informed__c</columns>
    <columns>Date_Informed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Late_Load__c.Health_Safety</value>
    </filters>
    <label>Health &amp; Safety</label>
</ListView>